# stormint

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: foundry.yml  publish.yml  rust.yml
contracts/: .gitignore
contracts/src/: FreeMint.sol
contracts/test/: FreeMint.t.sol
src/: lib.rs
src/account/: generate.rs  mod.rs
src/distributor/: distribute.rs
src/executor/: caller.rs  execute.rs  mod.rs
src/mint/: miner.rs  mod.rs
tests/: config.toml  integration_distribute.rs  integration_mint.rs  mod.rs
tests/common/: artifact.rs  config.rs  deployer.rs  mod.rs  model.rs  provider.rs
tests/e2e/: workflow_test.rs
tests/integration/: distribute_test.rs  error_handling_test.rs  mint_test.rs  mod.rs
tests/unit/: account_tests.rs  distributor_tests.rs  executor_tests.rs  mint_tests.rs  mod.rs
