[package]
name = "stormint"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.5.4", features = ["full", "signer-mnemonic"] }
tokio = { version = "1.41.0", features = ["full"] }
eyre = "0.6.12"
rayon = "1.10.0"
indicatif = "0.17.8"
futures = "0.3.31"

[dev-dependencies]
alloy = { version = "0.5.4", features = ["provider-anvil-node", "getrandom"] }
alloy-node-bindings = "0.5.4"
serde = "1.0.213"
serde_json = "1.0.132"
